# kmer2stats

./: CITATION.cff  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: tests.yml
kmer2stats/: core.py
kmer2stats.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
script/: kmer2stats.py
test/: test_file.txt
tests/: test_kmer2stats.py
